[tool.poetry]
name = "mangaf3tch"
version = "0.1.0"
description = "A CLI tool to download and convert manga chapters into PDFs."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://yourprojecthomepage.com"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26"
beautifulsoup4 = "^4.10"
Pillow = "^8.4"
typer = "^0.4"
click = "^8.0"

[tool.poetry.scripts]
mangaf3tch = "mangaf3tch:app"
